# fay-pwc-vendor-analysis

./: .editorconfig  .gitignore  .markdownlint.json  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  cspell.json  pyproject.toml
.claude/: CLAUDE.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: slice-card.md
.github/workflows/: ci.yml  codeql.yml  content-guards.yml
data/: DATA_DICTIONARY.md
data/sample/: nclbgc-license-details.csv  vendor-details-evp-nc.csv
docs/: README.md  data-cleaning-protocol.md  database-schema.md  design-evp.md  design-nclbgc.md  design-validation.md  master-data-documentation.md  phase-2-plan.md  project-plan.md  requirements-evp.md  requirements-nclbgc.md  requirements-validation.md  runbook-evp-drift.md  src-triage-audit.md  traceability-evp.md  traceability-nclbgc.md
meta/: README.md
phases/phase-2-data-prep/: README.md
reports/: findings-summary.md  methodology.md
src/acquisition/: nclbgc_license_details_acquisition.py  nclbgc_licenses_acquisition.py
src/acquisition/trash/: nclbgc_license_details_acquisition.py  nclbgc_licenses_acquisition.py
src/cleaning/: clean_data.py  list_columns.py  make_audit.py  merge_vendors.py  profile_data.py
src/cleaning/trash/: clean_data.py  list_columns.py  make_audit.py  merge_vendors.py
src/vendorscope/: __init__.py  audit.py  cli.py  columns.py  drift.py  evp_client.py  evp_parse.py  http_client.py  nclbgc_client.py  nclbgc_parse.py  paths.py  pipeline.py  profiling.py  tabular.py  text.py
src/vendorscope/cleaning/: __init__.py  cli.py  config.py  engine.py  pipeline.py  records.py  transforms.py  validate.py
src/vendorscope/cleaning/trash/: config.py  transforms.py
src/vendorscope/db/: __init__.py  connection.py  schema.py
src/vendorscope/trash/: audit.py  evp_parse.py  http.py  nclbgc_client.py  nclbgc_parse.py  profiling.py
src/vendorscope/trash/sandbox/: __init__.py  license_validation.py  validate_pipeline.py
templates/: readme-phase.md
tests/: conftest.py  test_audit.py  test_cleaning_config.py  test_cleaning_engine.py  test_cleaning_pipeline.py  test_cleaning_smoke.py  test_cleaning_transforms.py  test_cli.py  test_cli_help.py  test_columns.py  test_db_schema.py  test_drift.py  test_evp_client.py  test_evp_parse.py  test_fixtures_no_pii.py  test_idempotency.py  test_imports.py  test_integration_evp.py  test_integration_nclbgc.py  test_nclbgc_clean.py  test_nclbgc_cli.py  test_nclbgc_client.py  test_nclbgc_parse.py  test_paths.py  test_pipeline.py  test_profiling.py  test_scrapers_integration.py  test_tabular.py  test_text.py  test_transforms.py
tests/fixtures/evp/: results.html  template-miss.html  vendordetails-clean.html  vendordetails-drift-addedclause.html  vendordetails-drift-nonactive.html  vendordetails-drift-singlecategoryhub.html  vendordetails-synthetic.html
tests/fixtures/nclbgc/: detail.html  details.html  qualifiers-quirk.html  qualifiers.html  search-empty.html  search-result.html  search.html
tools/: make_evp_fixture.py  make_nclbgc_fixture.py
