[project]
name = "vendorscope"
version = "0.1.0"
description = "VendorScope: vendor readiness & availability analytics. Turns public vendor and licensing data into an audited, decision-ready view of supplier availability and procurement readiness."
readme = "README.md"
requires-python = ">=3.14"
license = { file = "LICENSE" }
authors = [{ name = "Wolfgang Sanyer", email = "wolfgang.sanyer@gmail.com" }]
dependencies = [
    "pandas>=3.0",
    "openpyxl>=3.1",
    "tqdm>=4.65",
    "selenium>=4.40",
    "playwright>=1.50",
    "webdriver-manager>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Only the pure-core package ships in the wheel; the acquisition/cleaning
# scripts are run by file path, not imported as part of a distribution.
[tool.hatch.build.targets.wheel]
packages = ["src/vendorscope"]

[tool.uv]
package = true

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [".venv"]

[tool.ruff.lint]
# Replicate ruff's default select (E4, E7, E9, F) so this config introduces no new
# diagnostics on these scripts, plus CPY (flake8-copyright) to enforce the required
# authorship/license banner. The broader "E" (E501 line-length, E2 whitespace), W,
# and I (isort) are intentionally NOT added: these scripts have long lines and
# unsorted imports that those selects would flag, which is out of scope here.
# CPY001 is a preview rule, so lint.preview is enabled (scoped to lint only).
preview = true
select = ["E4", "E7", "E9", "F", "CPY"]

[tool.ruff.lint.flake8-copyright]
# Match our exact banner copyright line (literal TOML string: no backslash escaping).
notice-rgx = '(?i)Copyright\s+©\s+\d{4}\s+Wolfgang Sanyer'
