[project]
name = "vendorscope"
version = "0.4.0"
description = "VendorScope: vendor readiness & availability analytics. Turns public vendor and licensing data into an audited, decision-ready view of supplier availability and procurement readiness."
readme = "README.md"
requires-python = ">=3.14"
license = { file = "LICENSE" }
authors = [{ name = "Wolfgang Sanyer", email = "wolfgang.sanyer@gmail.com" }]
dependencies = [
    "httpx>=0.28.1",
    "pandas>=3.0",
]

# The single console entrypoint; subcommands are acquire-evp, profile, clean.
[project.scripts]
vendorscope = "vendorscope.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# The installable package is the whole product; everything importable lives in it.
[tool.hatch.build.targets.wheel]
packages = ["src/vendorscope"]

[tool.ruff]
line-length = 88
target-version = "py314"
src = ["src"]

[tool.ruff.lint]
# Broad data/research lint tier per the project's Python standards (bugbear B,
# simplify SIM, use-pathlib PTH, ruff-specific RUF, pyupgrade UP, isort I),
# plus CPY for the license banner. CPY001 is a preview rule, so lint.preview
# is enabled (scoped to lint only; the formatter is untouched).
preview = true
select = ["E", "F", "W", "I", "UP", "B", "SIM", "PTH", "RUF", "CPY"]
# en-dash and multiplication-sign are intentional typography; whitelist them so
# RUF001-003 still flag unexpected confusables.
allowed-confusables = ["–", "×"]

[tool.ruff.lint.isort]
known-first-party = ["vendorscope"]

[tool.ruff.lint.flake8-copyright]
# Match our exact banner copyright line (literal TOML string: no backslash escaping).
notice-rgx = '(?i)Copyright\s+©\s+\d{4}\s+Wolfgang Sanyer'

[dependency-groups]
dev = [
    "pyright>=1.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.16",
]

[tool.pyright]
include = ["src/vendorscope"]
typeCheckingMode = "basic"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--strict-markers", "--tb=short", "-ra"]
markers = [
    "unit: Unit tests for pure functions and business logic",
    "contract: Contract tests that verify external API assumptions",
    "integration: End-to-end tests that call a live API",
]
minversion = "7.0"
